--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,7 @@
     font-family: cursive;
 }
 #fundo{
-    background-image: linear-gradient(to bottom right, rgb(255, 255, 255),rgb(151, 151, 151), rgb(104, 104, 104),rgb(41, 41, 41));
+    background-image: linear-gradient(to bottom right, rgb(255, 255, 255),rgb(167, 167, 167), rgb(134, 134, 134),rgb(104, 104, 104));
 }
 #fontpe{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -14,6 +14,8 @@
     font-style: italic;
     text-align: justify;
     font-size: small;
+    bottom: 0;
+    width: 100%;
 }
 #sobre{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -25,3 +27,20 @@
     font-weight: bold;
 }
 
+.produtos{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.tamanho_prod{
+    width: 250px;
+    border: 1px solid rgb(41, 41, 41);
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+    flex: 0 0 calc(25% - 5%);
+}
