--- a/estilo.css
+++ b/estilo.css
@@ -22,8 +22,7 @@
     color: rgb(41, 41, 41);
     font-style: italic;
     text-align: justify;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin: 5% 30% 5% 30%;
     font-weight: bold;
 }
 
