--- a/estilo.css
+++ b/estilo.css
@@ -125,14 +125,20 @@
 }
 .pagar{
     text-align: left;
-    padding: 10px 10px ;
-    margin: 5% 30% 5% 30%;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: whitesmoke;
     font-weight: bold;
-    vertical-align: middle;
+    color: rgb(255, 0, 0);
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 7%;
 }
 .vazio{
     margin-top: 10%;
     color: transparent;
+}
+.btnedit{
+    text-align: right;
+    margin: 1% 30% 15% 30%;
+    display: flex;
+    justify-content: space-between;
 }
